--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -48,3 +48,19 @@ button {
     font-size: 1.2rem;
     color: blue;
 }
+
+.card {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    border: 2px solid black;
+    padding: 10px;
+    border-radius: 10px;
+    width: 70vw;
+}
+.card-name{
+    padding: 10px;
+}
+.color_blue {
+    background: burlywood;
+}
